--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,14 @@
         android:layout_height="match_parent"
         android:id="@+id/swipeLayout"
         android:orientation="vertical">
-    <ScrollView
+    <android.spport.v7.widget.RecylerView
+        android:id="@+id/recylerview_news"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/news_title_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textSize="20sp"/>
-    </ScrollView>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:paddingTop="5dp"
+        android:clipToPadding="false"
+        />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
