--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.cai.newsapp.MainActivity">
+    android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/swipeLayout"
         android:orientation="vertical">
-    <android.spport.v7.widget.RecylerView
-        android:id="@+id/recylerview_news"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:paddingTop="5dp"
-        android:clipToPadding="false"
-        />
+        <ListView
+            android:id="@+id/listLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
