--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -4,7 +4,7 @@
     android:layout_marginBottom="5dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:clickable="true">
+    android:clickable="false">
 
     <LinearLayout
         android:layout_width="match_parent"
