--- a/app/src/main/res/layout/news_detail.xml
+++ b/app/src/main/res/layout/news_detail.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="256dp"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -55,12 +55,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ProgressBar
-                android:id="@+id/progress"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/NewsTitle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:padding="12dp"
+                android:textSize="30sp"
+                android:textAppearance="@android:style/TextAppearance.Medium" />
+
+
 
             <TextView
                 android:id="@+id/NewsContent"
@@ -68,6 +71,13 @@
                 android:layout_height="match_parent"
                 android:padding="12dp"
                 android:textAppearance="@android:style/TextAppearance.Medium" />
+
+            <LinearLayout
+                android:id="@+id/viewGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical" />
 
         </LinearLayout>
 
