--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,13 +4,18 @@
 
     <item
         android:id="@+id/action_history"
-        android:orderInCategory="1"
+        android:orderInCategory="3"
         app:showAsAction="never"
         android:title="浏览历史"/>
     <item
         android:id="@+id/action_change_skin"
-        android:orderInCategory="2"
+        android:orderInCategory="5"
         app:showAsAction="never"
         android:title="更换昼夜模式" />
+    <item
+        android:id="@+id/search"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom"
+        android:title="Search"/>
 
 </menu>
