--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,6 +13,11 @@
         app:showAsAction="never"
         android:title="更换昼夜模式" />
     <item
+        android:id="@+id/action_tag_set"
+        android:orderInCategory="7"
+        app:showAsAction="never"
+        android:title="设置屏蔽"/>
+    <item
         android:id="@+id/search"
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
