--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,6 +8,11 @@
         app:showAsAction="never"
         android:title="浏览历史"/>
     <item
+        android:id="@+id/action_clear"
+        android:orderInCategory="4"
+        app:showAsAction="never"
+        android:title="清空"/>
+    <item
         android:id="@+id/action_change_skin"
         android:orderInCategory="5"
         app:showAsAction="never"
