--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_clear"
+        android:id="@+id/action_collection"
         android:orderInCategory="1"
         app:showAsAction="never"
         android:title="收藏/删除"/>
