--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -7,5 +7,14 @@
         android:orderInCategory="1"
         app:showAsAction="never"
         android:title="收藏/删除"/>
-
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="2"
+        app:showAsAction="never"
+        android:title="微博分享"/>
+    <item
+        android:id="@+id/action_get_access"
+        android:orderInCategory="3"
+        app:showAsAction="never"
+        android:title="微博授权"/>
 </menu>
